--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -66,7 +66,7 @@ a {
 header {
   display: flex;
   flex-flow: row nowrap;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
   width: 100%;
 
@@ -75,14 +75,33 @@ header {
   // background: $offwhite;
   // background: lighten($offwhite, 5%);
 
-  padding: 1rem 0 1rem 0;
+  padding: 0.5rem 0 0.5rem 0;
   // margin-top: 1rem;
   // padding-bottom: 2rem;
   box-shadow: 0 5px 10px -2px rgba($black, 0.2), 0 2px 4px -1px rgba($black, 0.3);
   // border-bottom: 1px solid $col__border;
 
-  .header__logo {
-    margin-left: 1rem;
+  .header__logo__container {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    margin: 0 0 0 1rem;
+    padding: 0;
+    background: transparent;
+    border: 0;
+
+    text-decoration: none;
+    
+    .header__logo {
+      width: 50px;
+      height: auto;
+    }
+
+    span {
+      margin-left: 5px;
+      font-size: 1.5rem;
+    }
+    // background-image: url("../img/logo.png");
   }
 
   .header__navigation {
@@ -137,8 +156,13 @@ header {
   min-height: 100%;
   background: $offwhite;
   flex-grow: 1;
+  justify-content: center;
 
   section {
+    // display: flex;
+    // width: 100%;
+    // flex-flow: column nowrap;
+    // align-items: center;
     padding: 0 5rem;
     @media #{$screen-phone-s}{
       padding: 0 0.5rem;
@@ -324,8 +348,19 @@ header {
   border-bottom: 1px dotted #555;
 }
 
+.chartProgress {
+  margin-top: 2rem;
+}
+
 .chartPaper {
-  width: 45%;
+  min-width: 212px;
+  width: 100%;
+  max-width: 500px;
+  @media #{$screen-phone-s} {
+    margin-top: 10px;
+    min-width: 100%;
+    // width: 100%;
+  }
 }
 
 .chartRow {
