--- a/src/css/main.css
+++ b/src/css/main.css
@@ -164,6 +164,17 @@ header .header__loginarea a:hover {
           box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.4), 0 2px 4px -1px rgba(0, 0, 0, 0.6);
 }
 
+@media screen and (max-width: 740px) {
+  header {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  header .header__navigation, header .header__loginarea {
+    display: none;
+  }
+}
+
 .page {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -435,6 +446,7 @@ header .header__loginarea a:hover {
   min-width: 212px;
   width: 100%;
   max-width: 500px;
+  margin-bottom: 5rem;
 }
 
 @media screen and (max-width: 500px) {
