--- a/src/css/main.css
+++ b/src/css/main.css
@@ -180,6 +180,7 @@ header .header__menubtn__toggle {
   z-index: 1000;
   -webkit-transition: all 1s;
   transition: all 1s;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.2);
 }
 
 header .header__menubtn__toggle hr {
@@ -199,12 +200,17 @@ header ._closeMenu {
   width: 3rem;
   height: 3rem;
   display: none;
+  margin-left: -1rem;
 }
 
 header ._openMenu {
   width: 2.2rem;
   height: 2.2rem;
   display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 1rem;
 }
 
 @media screen and (max-width: 740px) {
